# game_of_life

./: .envrc  .travis.yml  Cargo.toml  README.md  codecov.yml  search-index.js
game_of_life/: create_initial_population.v.html  fn.create_initial_population.html  fn.run_game.html  index.html  run_game.v.html  sidebar-items.js
game_of_life/cell/: index.html  struct.Cell.html
game_of_life/config/: create_config.v.html  fn.create_config.html  index.html  sidebar-items.js  struct.Config.html
game_of_life/place/: Place.t.html  fn.distance.html  index.html  struct.Place.html
game_of_life/population/: index.html  sidebar-items.js  struct.Population.html
game_of_life/screen/: fn.clear.html  fn.print_header.html  index.html  print_header.v.html  sidebar-items.js
game_of_live/: Population.t.html  index.html  sidebar-items.js  struct.Cell.html  struct.Place.html  struct.Population.html  struct.Status.html
game_of_live/cell/: index.html  sidebar-items.js  struct.Cell.html
game_of_live/place/: fn.distance.html  index.html  sidebar-items.js  struct.Place.html
game_of_live/population/: index.html  struct.Population.html
implementors/core/clone/: trait.Clone.js
scripts/: generate_site.sh
src/: cell.rs  config.rs  dimension.rs  lib.rs  main.rs  place.rs  population.rs  screen.rs  status.rs
src/game_of_life/: cell.rs.html  config.rs.html  dimension.rs.html  lib.rs.html  place.rs.html  population.rs.html  screen.rs.html  status.rs.html
src/game_of_live/: cell.rs.html  dimension.rs.html  lib.rs.html  place.rs.html  population.rs.html  status.rs.html
(+3 files in other folders)
